--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 </head>
 <body>
   <h1>Dhruv's Projects</h1>
-  <p class="intro">Hey there 👋 — I'm Dhruv, and this is a quick peek into the stuff I've been building lately. These projects are powered by curiosity, caffeine, and a lot of late-night debugging.</p>
+  <p class="intro">Hey there 👋 — I'm Dhruv, and this is a quick peek into the stuff I've been building lately. These projects are powered by curiosity, and a lot of late-night debugging.</p>
 
   <div class="container" id="projects-container">Loading projects...</div>
 
-  <div class="footer">Handcrafted by Dhruv • Hosted on GitHub Pages</div>
+  <div class="footer">Handcrafted by <a href="https://github.com/dgstuff>Dhruv</a> • Hosted on <a href="github.io>Github Pages</a> </div>
 
   <script>
     fetch('projects.json')
