--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <div class="container" id="projects-container">Loading projects...</div>
 
-  <div class="footer">Handcrafted by <a href="https://github.com/dgstuff>Dhruv</a> • Hosted on <a href="github.io>Github Pages</a> </div>
+  Handcrafted by <a href="https://github.com/dgstuff">Dhruv</a> • Hosted on <a href="https://github.io">Github Pages</a>
 
   <script>
     fetch('projects.json')
