--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       margin-top: 2em;
     }
   </style>
+  <link rel="icon" href="https://avatars.githubusercontent.com/u/233354553?v=4&size=40" type="image/png">
 </head>
 <body>
   <h1>Dhruv's Projects</h1>
