--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       --alt-color: #e8b7b7;
       --font-color: rgb(230, 228, 228);
       --grey-font: rgb(124, 123, 123);
+      --link-hover: #ffdddd;
+      --tag-bg: #504848;
+      --tag-color: #e8b7b7;
     }
 
     * {
@@ -76,19 +79,63 @@
 
     .project h3 {
       color: var(--alt-color);
-      margin-bottom: 0.6em;
+      margin-bottom: 0.4em;
       font-size: 1.2em;
+      font-weight: 600;
     }
 
     .project h3 a {
       text-decoration: none;
       color: inherit;
+      border-bottom: 1px dashed transparent;
+      transition: color 0.2s ease, border-bottom 0.2s ease;
+    }
+
+    .project h3 a:hover {
+      color: var(--link-hover);
+      border-bottom: 1px dashed currentColor;
     }
 
     .project p {
       color: var(--font-color);
       font-size: 0.95em;
       line-height: 1.5;
+      margin-bottom: 0.6em;
+    }
+
+    .project .tags {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5em;
+      margin-top: 0.5em;
+    }
+
+    .project .tag {
+      background-color: var(--tag-bg);
+      color: var(--tag-color);
+      font-size: 0.75em;
+      padding: 0.2em 0.6em;
+      border-radius: 12px;
+      display: inline-block;
+      font-weight: 500;
+    }
+
+    .project .tag:hover {
+      background-color: var(--alt-color);
+      color: var(--background-color);
+      cursor: default;
+    }
+
+    a {
+      color: var(--alt-color);
+      text-decoration: none;
+      border-bottom: 1px dashed transparent;
+      transition: color 0.2s ease, border-bottom 0.2s ease;
+    }
+
+    a:hover {
+      color: var(--link-hover);
+      border-bottom: 1px dashed currentColor;
     }
 
     .footer {
@@ -128,11 +175,23 @@
         }
 
         projects.forEach(project => {
+          // Dynamic tag generation
+          const tags = [];
+
+          if (project.url) tags.push("🌐 Web");
+          if (/AI/i.test(project.name + " " + project.description)) tags.push("🤖 AI");
+          if (/game/i.test(project.name + " " + project.description)) tags.push("🎮 Game");
+          if (/tool/i.test(project.name + " " + project.description)) tags.push("🛠️ Tool");
+          if (/quiz/i.test(project.name + " " + project.description)) tags.push("📝 Quiz");
+
           const div = document.createElement('div');
           div.className = 'project';
           div.innerHTML = `
             <h3><a href="${project.url}" target="_blank" rel="noopener noreferrer">${project.name}</a></h3>
             <p>${project.description}</p>
+            <div class="tags">
+              ${tags.map(tag => `<span class="tag">${tag}</span>`).join('')}
+            </div>
           `;
           container.appendChild(div);
         });
@@ -144,4 +203,3 @@
   </script>
 </body>
 </html>
-
