--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </head>
 <body>
   <h1>Dhruv's Projects</h1>
-  <p class="intro">Hey there 👋 — I'm Dhruv, and this is a quick peek into the stuff I've been building lately. These projects are powered by curiosity, and a lot of late-night debugging.</p>
+  <p class="intro">Hey there 👋 — I'm Dhruv, and this is a quick peek into the stuff I've been building lately.</p>
 
   <div class="container" id="projects-container">Loading projects...</div>
 
